[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/EnemyAI/Enemy_1.gd" type="Script" id=1]
[ext_resource path="res://Scripts/EnemyAI/Vorticella_disable.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]

[node name="Vorticella" type="Node2D"]
script = ExtResource( 1 )

[node name="Base" type="Node2D" parent="."]
rotation = -1.5708

[node name="KinematicBody2D" type="KinematicBody2D" parent="Base" groups=[
"Hazard",
"Voticella",
]]
rotation = 1.5708
collision_layer = 16
collision_mask = 17
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/KinematicBody2D"]
position = Vector2( 0, -20 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Base"]
rotation = 1.5708
collision_layer = 0
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Base/Area2D"]
position = Vector2( 0, -20 )
polygon = PoolVector2Array( 0, 0, 80, -250, -80, -250 )

[node name="RayCastParent" type="Node2D" parent="."]
rotation = -1.5708

[node name="RayCast2D" type="RayCast2D" parent="RayCastParent"]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 300 )
collision_mask = 34
[connection signal="body_entered" from="Base/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Base/Area2D" to="." method="_on_Area2D_body_exited"]
